# cmake-cbc

./: CMakeLists.txt  FooConfig.cmake.in  README.md
Foo/: CMakeLists.txt
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
FooApp/: CMakeLists.txt
FooApp/src/: main.cpp
cmake/: CMakeCbcConfig.cmake.in  CMakeLists.txt  Cbc.cmake  Makefile  cbc.CMakeLists.txt
cmake/sample/: CMakeLists.txt
patches/: cbc.patch
